[package]
name = "FOMOSCL"
version = "2.3.5"
edition = "2018"


[[bin]]
name = "FOMOSCL"
path = "boot/src/main.rs"


[dependencies]
bootloader = "0.9.11"
boot = { path = "boot/" }
arch = { path = "arch/" }
kernel = { path = "kernel/" }

[workspace]
members = [
    "boot/",
    "kernel",
    "arch",
]

