[package]
name = "FOMOSv2_CL"
version = "2.3.5"
edition = "2018"


[lib]
name = "FOMOSv2_CL"
crate-type = ["staticlib"]
path = "src/lib.rs"


[workspace]
members = [
    "kernel/",
    "arch/",
]


[dependencies]
fk_std = "0.2.3"
arch = { path = "arch/" }
kernel = { path = "kernel/" }

[build-dependencies]
cc = "1.0.65"