[package]
name = "FOMOSv2_CL"
version = "2.3.5"
edition = "2018"


[lib]
name = "FOMOSv2_CL"
crate-type = ["staticlib"]
path = "src/lib.rs"


[workspace]
members = [
    "arch/",
    "fomos/",
]


[dependencies]
fk_std = "0.3.3"
arch = { path = "arch/" }
fomos = { path = "fomos/" }

[build-dependencies]
cc = "1.0.65"
