[dependencies]
heapless = "0.4.4"
num_enum = "0.3.1"
spin="0.5"
#num_enum = {path = "../num_enum"}
no-std-compat = {version="0.1.0", features=["alloc", ]}

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.smallbitvec]
#git = "https://github.com/servo/smallbitvec"
version = "2.5.0"
